--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
        qwefqwef
     </head>
     <body>
-      qwegqwergqwrgwrgwergwergwe
+      Ntaxei min stockaris kai etsi twra exw tin ip sou xd 
     </body>
 </html>
