--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-       qwefqwef
+       Poly Gangster
     </head>
     <body>
       Ntaxei min stockaris kai etsi twra exw tin ip sou xd 
