--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-       Poly Gangster
+       Ntaxei min 
     </head>
     <body>
-      Ntaxei min stockaris kai etsi twra exw tin ip sou xd 
+      stockaris kai etsi twra exw tin ip sou xd 
     </body>
 </html>
